# rendercv

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  John_Doe_CV.yaml  README.md  SECURITY.md  blueprint.md  classic_full.typ  classic_minimal.typ  consolidated_example.yaml  cv.yaml  cv1.yaml  cv2.yaml  cv3.yaml  cv_20241230_144957.yaml  index.html  justfile  lib.typ  mkdocs.yaml  objects.inv  package-lock.json  package.json  pyproject.toml  pytest.ini  reimagined_design.yaml  reimagined_locale.yaml  rendercv_blueprint.md  requirements.txt  resume.json  schema.json  server.js  sitemap.xml  test.py  test.typ  test.yaml  test_CV.yaml
.claude/: settings.json
.claude/skills/publish-rendercv-typst-package/: SKILL.md
.claude/skills/publish-typst-package/: SKILL.md
.claude/skills/rendercv-development-context/: SKILL.md
.claude/skills/rendercv-testing-context/: SKILL.md
.claude/skills/review-rendercv-pr/: SKILL.md
.claude/skills/solve-rendercv-issue/: SKILL.md
.claude/skills/triage-rendercv-issue/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: claude-pr-review.yaml  create-executables.yaml  deploy-docs.yaml  publish-a-release.yaml  release.yaml  test.yaml  update-cv.yaml  update-examples.yaml  update-files.yaml
app/: Dockerfile  docker-compose.yml  main.py  requirements.txt
app/static/: index.html
backend/: main.py
backend/static/: index.html
changelog/: index.html
docs/: ats_compatibility.md  changelog.md  docs_templating.py  dynamic_content_generation.py  index.md  llms.txt
docs/api_reference/: api_reference.py  index.md
docs/assets/javascripts/: katex.js
docs/assets/stylesheets/: rendercv.css  rendercv.scss
docs/changelog/: index.md
docs/developer_guide/: dockerfile.md  documentation.md  github_workflows.md  index.md  json_schema.md  old_documentation.md  old_testing.md  project_management.md  testing.md  understanding_rendercv.md  writing_tests.md
docs/developer_guide/code_guidelines/: source_code.md  tests.md  writing_tests.md
docs/developer_guide/how_to/: add_locale.md  add_social_network.md  add_theme.md
docs/developer_guide/tests/: writing_tests.md
docs/overrides/partials/: logo.html  toc-item.html
docs/reference/themes/: classic.md  components.md  engineeringclassic.md  engineeringresumes.md  moderncv.md  sb2nov.md
docs/user_guide/: cli.md  cli_reference.md  index.md  sample_entries.yaml  structure_of_the_yaml_input_file.md  yaml_input_structure.md
docs/user_guide/how_to/: arbitrary_keys_in_entries.md  custom_fonts.md  override_default_templates.md  set_up_gitea_action_for_rendercv.md  set_up_vs_code_for_rendercv.md  use_the_ai_agent_skill.md
docs/user_guide/yaml_input_structure/: cv.md  design.md  index.md  locale.md  settings.md
examples/: John_Doe_ClassicTheme_CV.yaml  John_Doe_ClassicTheme_CV_spanish.yaml  John_Doe_EmberTheme_CV.yaml  John_Doe_EngineeringclassicTheme_CV.yaml  John_Doe_EngineeringcoverTheme_Cover.yaml  John_Doe_EngineeringresumesTheme_CV.yaml  John_Doe_HarvardTheme_CV.yaml  John_Doe_InkTheme_CV.yaml  John_Doe_ModerncvTheme_CV.yaml  John_Doe_OpalTheme_CV.yaml  John_Doe_Sb2novTheme_CV.yaml  John_Doe_SkillIcons_CV.yaml  fridljand_cv.yaml
frontend/: package-lock.json  package.json
old_docs/changelog/: index.md
old_docs/developer_guide/: index.md
reference/: index.html
reference/cli/: index.html
reference/data_models/: index.html
reference/renderer/: index.html
reference/themes/: index.html
reference/themes/classic/: index.html
reference/themes/engineeringresumes/: index.html
reference/themes/moderncv/: index.html
reference/themes/sb2nov/: index.html
rendercv/: __init__.py  __main__.py
rendercv-typst/: CHANGELOG.md  README.md  typst.toml
rendercv-typst/examples/: classic.typ  engineeringclassic.typ  moderncv.typ  sb2nov.typ
rendercv/cli/: commands.py  utilities.py
rendercv/data/: __init__.py  reader.py  sample_content.yaml
rendercv/data/models/: __init__.py  base.py  computers.py  curriculum_vitae.py  design.py  entry_types.py  rendercv_data_model.py  rendercv_settings.py  versions.py
rendercv/renderer/: renderer.py  templater.py
rendercv/themes/: main.j2.html  main.j2.typ  options.py
rendercv/themes/classic/: ConsolidatedMultiRoleExperienceEntry.j2.typ  EducationEntry.j2.typ  Preamble.j2.typ
rendercv/themes/components/: area.j2.typ  authors.j2.typ  company.j2.typ  date.j2.typ  degree.j2.typ  details.j2.typ  grade.j2.typ  highlights.j2.typ  highlights_header.j2.typ  institution.j2.typ  journal.j2.typ  label.j2.typ  location.j2.typ  name.j2.typ  roles.j2.typ  (+3 more)
scripts/: create_executable.py  create_gui_executable.py  update_entry_figures.py  update_examples.py  update_schema.py
scripts/ats_proof/: analyze_pdfs.py  ats_compatibility.j2.md  evaluate.py  generate_report.py  pyproject.toml  render_pdfs.py  submit_commercial.py
scripts/rendercv_skill/: generate.py  skill_template.j2.md
scripts/update_llms_txt/: template.j2.md  update_llms_txt.py
search/: search_index.json
shell_scripts/: run_rendercv.sh  run_tests.sh  scan_vulnerabilities.sh
src/rendercv/: __init__.py  __main__.py  exception.py
tests/: conftest.py  strategies.py  test_cli.py  test_data.py  test_generated_files.py  test_hypothesis.py  test_offline_whl.py  test_renderer.py
tests/cli/: test_app.py  test_copy_templates.py  test_error_handler.py  test_printer.py
tests/integration/: test_tests.py
tests/old_tests/: conftest.py  test_api.py  test_data.py  test_hatch_scripts.py  test_renderer.py
tests/renderer/: conftest.py  test_html.py  test_markdown.py  test_path_resolver.py  test_pdf_png.py  test_typst.py
tests/schema/: test_context.py  test_filter.py  test_locale.py  test_override_dictionary.py  test_pydantic_error_handling.py  test_rendercv_model_builder.py  test_rendercv_reader.py  test_sample_generator.py  test_variant_class_generator.py  test_variant_pydantic_model_generator.py  test_yaml_path_containment.py  test_yaml_reader.py
tests/testdata/: John_Doe_CV.yaml
user_guide/: index.html
(+397 files in other folders)
