[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "rendercv"
version = "1.0.0"
description = "Typst-based CV/resume generator for academics and engineers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "Jinja2>=3.1.6", "phonenumbers>=9.0.19", "pydantic[email]>=2.10.6", "pydantic-extra-types>=2.10.6", "ruamel.yaml>=0.18.10", "packaging>=25.0",]
classifiers = [ "Intended Audience :: Science/Research", "Intended Audience :: Education", "Topic :: Text Processing :: Markup", "Topic :: Printing", "Development Status :: 5 - Production/Stable", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
[[project.authors]]
name = "Sina Atalay"
email = "dev@atalay.biz"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
full = [ "typer>=0.20.0", "markdown>=3.10", "watchdog>=6.0.0", "typst>=0.14.4", "rendercv-fonts>=0.5.1",]

[project.urls]
"Web App" = "https://rendercv.com"
Source = "https://github.com/rendercv/rendercv"
Documentation = "https://docs.rendercv.com"
Changelog = "https://docs.rendercv.com/changelog"

[project.scripts]
rendercv = "rendercv.cli.entry_point:entry_point"

[tool.poetry]
include = [ "src/rendercv/templates/error_dictionary.yaml",]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [ "tests", "integration",]
